<resources>
    <string name="app_name">Veg Finder</string>
    <string name="POSITION_URL">http://www.vegguide.org/search/by-lat-long/</string>
    <string name="ADDRESS_URL">http://www.vegguide.org/search/by-address/</string>

    <string name="action_settings">Settings</string>
    <string name="address_text">\tSearch address</string>
    <string name="delete_text">clearButton</string>
    <string name="name">New Text</string>
    <string name="description">New Text</string>
    <string name="distance">New Text</string>
    <string name="phone">New Text</string>
    <string name="address">New Text</string>
    <string name="city">New Text</string>
    <string name="action_refresh">Refresh</string>
    <string name="logo">logo</string>

    <string name="banner_ad_unit_id">ca-app-pub-7077250937949801/4550137974</string>
</resources>
