<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"

    tools:context=".MainActivity"
    android:background="#ff669900"
    android:backgroundTintMode="add"
    android:touchscreenBlocksFocus="false">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_action_bar_toolbar"
        android:layout_height= "@android:dimen/app_icon_size"
        android:layout_width= "match_parent"
        android:minHeight= "?attr/actionBarSize"
        android:background= "#ffff8800"
        android:contentInsetLeft="0dp"
        android:contentInsetStart="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetLeft="0dp">
        <ImageView
            android:id="@+id/imageView"
            android:layout_height= "fill_parent"
            android:layout_marginLeft="0dp"
            android:layout_width="45dp"
            android:src="@drawable/ic_launcher"
            android:contentDescription="@string/logo"
            android:cropToPadding="true"
            android:paddingTop="@dimen/abc_action_bar_subtitle_bottom_margin_material" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textColor="@color/material_blue_grey_950"
            android:textSize="@dimen/abc_text_size_headline_material"
            android:gravity="bottom"
            android:paddingTop="@dimen/abc_text_size_button_material" />
    </android.support.v7.widget.Toolbar>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="@dimen/abc_action_bar_stacked_max_height"
        android:layout_below="@+id/my_action_bar_toolbar"
        android:layout_marginTop="@dimen/abc_action_button_min_height_material"
        android:inputType="textPostalAddress"
        android:ems="@integer/abc_config_activityDefaultDur"
        android:id="@+id/addressText"
        android:enabled="true"

        android:layout_alignParentTop="true"
        android:hint="@string/address_text"
        android:autoText="false"
        android:singleLine="true"
        android:textSize="@dimen/abc_text_size_title_material"
        android:textStyle="italic"
        android:padding="@dimen/abc_action_bar_default_padding_material" />

    <ImageButton
        android:id="@+id/delete_Text"
        android:layout_width="@dimen/abc_text_size_title_material_toolbar"
        android:layout_height="@dimen/abc_action_bar_icon_vertical_padding_material"
        android:layout_below="@+id/my_action_bar_toolbar"
        android:layout_marginTop="@dimen/abc_action_button_min_height_material"
        android:layout_gravity="right|center_vertical"
        android:background="@drawable/ic_action_remove"
        android:contentDescription="@string/delete_text"
        android:layout_alignBottom="@+id/addressText"
        android:adjustViewBounds="true"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/addressText"
        android:layout_alignEnd="@+id/addressText"
        android:cropToPadding="true"
        android:clickable="true"
        android:scaleType="fitEnd" />

    <ListView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:divider="@android:color/holo_green_dark"
        android:textAlignment="center"
        android:dividerHeight="@dimen/abc_button_padding_horizontal_material"
        android:choiceMode="singleChoice"
        android:layout_below="@+id/addressText"
        android:layout_above="@+id/adView"
        android:clickable="true"
        android:drawSelectorOnTop="false"
        android:textFilterEnabled="false"
        android:fastScrollEnabled="false"
        android:fastScrollAlwaysVisible="false"
        style="@style/Base.TextAppearance.AppCompat.Widget.ActionBar.Menu"
        android:paddingLeft="@dimen/abc_action_bar_subtitle_bottom_margin_material"
        android:paddingRight="@dimen/abc_action_bar_subtitle_bottom_margin_material" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>

